--- a/Eid.html
+++ b/Eid.html
@@ -41,7 +41,7 @@
         function DisplayEidMubarak(name){
             document.body.style.paddingRight = '50px';
             document.body.className = 'text-center';
-            document.body.style.background = "url('Eid.png') no-repeat";
+            document.body.style.background = "url('Eid.png')";
             document.getElementById('input_div').style.display = 'none';
             const eid_div = document.getElementById('eid_mubarak');
             const eid_text = document.getElementById('eid_text');
